src/tests/Advanced/ShouldFail/tuple_assoc.ml
let x,y,z = 1,(2,3) in prInt z
